src/tui/snapshots/control_acceso__tui__visual_tests__Respaldos_140x40_Classic.snap
---
source: src/tui/visual_tests.rs
expression: volcado
---
=== texto ===
                                                                                                                                            
 BRISAS CLI                                                                                                                   0 respaldo(s) 
 CONTROL DE ACCESO                                                      RESPALDOS                                                     ··:·· 
 ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 
 FECHA             TIPO              TAMAÑO     ESQUEMA   ESTADO                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                            No hay respaldos todavía. Presione C para crear uno.                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
 No hay un respaldo seleccionado.                                                                                                           
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
 ↑↓ Mover  C Crear  V Revalidar  E Exportar  R Restaurar  L Actualizar  ESC Volver  F2 Salida rápida  F7 Tema                               
                                                                                                                                            

=== estilos ===
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"BRISAS CLI" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
"                                                                                                                   " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"0 respaldo(s)" fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"CONTROL DE ACCESO" fg=Rgb(105, 135, 111) bg=Black mod=NONE
"                                   " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                   RESPALDOS                   " fg=Rgb(91, 224, 123) bg=Black mod=BOLD
"                                  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"··:··" fg=Rgb(238, 184, 78) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────" fg=Rgb(76, 119, 85) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"FECHA             TIPO              TAMAÑO     ESQUEMA   ESTADO                                                                           " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                           No hay respaldos todavía. Presione C para crear uno.                                           " fg=Rgb(238, 184, 78) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"No hay un respaldo seleccionado.                                                                                                          " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                          " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                          " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                          " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                          " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                          " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                          " fg=Rgb(105, 135, 111) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
" " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"↑↓" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Mover  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"C" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Crear  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"V" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Revalidar  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"E" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Exportar  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"R" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Restaurar  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"L" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Actualizar  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"ESC" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Volver  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"F2" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Salida rápida  " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"F7" fg=Rgb(91, 224, 123) bg=Black mod=BOLD
" Tema                               " fg=Rgb(196, 220, 199) bg=Black mod=NONE
"                                                                                                                                            " fg=Rgb(196, 220, 199) bg=Black mod=NONE
